use tip tap library

--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
 		"plugin-zip": "wp-scripts plugin-zip",
 		"start": "wp-scripts start --webpack-copy-php --blocks-manifest"
 	},
+	"dependencies": {
+		"@tiptap/react": "^2.1.13",
+		"@tiptap/starter-kit": "^2.1.13",
+		"@tiptap/extension-bold": "^2.1.13",
+		"@tiptap/extension-italic": "^2.1.13",
+		"@tiptap/extension-blockquote": "^2.1.13",
+		"@tiptap/extension-image": "^2.1.13"
+	},
 	"devDependencies": {
 		"@wordpress/scripts": "^31.1.0",
 		"@wordpress/api-fetch": "*"
